syntax = "proto3";
option java_multiple_files = true;

package com.epam.mentoring.grpc;

message UserRegistrationRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    int64 timestamp = 4;
}

message UserRegistrationResponse {
    string message = 1;
    int64 timestamp = 2;
}

service UserRegistrationService {
  rpc sendNotification(UserRegistrationRequest) returns (UserRegistrationResponse);
}
